--- a/hvp_db/templates/index.html
+++ b/hvp_db/templates/index.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h1>Human Virome Project Web</h1>
 <p>Welcome to the Human Virome Project Web interface.</p>
-<p><a href="{{ url_for('samples') }}">View samples</a></p>
+<p><a href="{{ url_for('hvp.samples') }}">View samples</a></p>
 {% endblock %}
