--- a/hvp_db/templates/base.html
+++ b/hvp_db/templates/base.html
@@ -4,8 +4,12 @@
   <meta charset="utf-8">
   <title>{{ title or 'Human Virome Project Web' }}</title>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css">
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js" integrity="sha512-60VN6X2sIwIVdsJtLZIbJflol0WFsSVt6UWlAqLer0J4jGiX90RifzBM5cxY20485sn1brE2TJuZCw1Uf2T7Ww==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
+  <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
 </head>
 <body>
   {% block content %}{% endblock %}
